# terms-of-use-service

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/rust-setup/: action.yml
.github/instructions/: domain.instructions.md  inbound.instructions.md  outbound.instructions.md
.github/workflows/: ci.yml
dockerfiles/: otel-collector-config.yaml  postgres-docker-compose.yml
dockerfiles/grafana/: tempo.yaml
dockerfiles/grafana/grafana/dashboards/: terms-overview.json
dockerfiles/grafana/grafana/provisioning/dashboards/: dashboards.yaml
dockerfiles/grafana/grafana/provisioning/datasources/: datasources.yaml
docs/: actix-web.md  dynamodb.md  google_cloud_storage.md  grpc.md  kafka.md  open-telemetry.md  postgres.md  redis.md  s3.md  sns.md  valkey.md
domain/: Cargo.toml
domain/src/: dto.rs  entities.rs  errors.rs  lib.rs
domain/src/data/: health_check.rs  mod.rs  repository.rs
domain/src/data/service/: cache.rs  mod.rs  publisher.rs  storage.rs
domain/src/use_cases/: create_agreement.rs  create_agreement_test.rs  create_term_of_use.rs  create_term_of_use_test.rs  get_latest_term.rs  get_latest_term_test.rs  has_agreed_to_terms.rs  has_agreed_to_terms_test.rs  mod.rs
inbound/: Cargo.toml  build.rs
inbound/src/: config.rs  lib.rs  mocks.rs
inbound/src/actix/: healthcheck.rs  mod.rs
inbound/src/actix/error/: mapper.rs  mod.rs
inbound/src/actix/v1/: controller.rs  mod.rs  payload.rs
inbound/src/grpc/: file_upload.rs  health_check.rs  mapper.rs  mod.rs  server.rs
inbound/src/grpc/tests/: create_consent_test.rs  create_term_test.rs  get_latest_terms_test.rs  has_consent_test.rs  health_check_test.rs  mod.rs
localstack/: setup-aws.sh
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
outbound/: Cargo.toml
outbound/src/: lib.rs
outbound/src/cache/: mod.rs
outbound/src/cache/deadpool_redis/: health_check.rs  mod.rs  service.rs
outbound/src/cache/noop/: mod.rs
outbound/src/cache/redis/: mod.rs
outbound/src/cache/valkey/: mod.rs
outbound/src/database/: mod.rs
outbound/src/database/dynamodb/: health_check.rs  migration.rs  mod.rs  model.rs
outbound/src/database/dynamodb/repositories/: mod.rs  term_repository.rs  user_agreement_repository.rs
outbound/src/database/postgres/: mod.rs
outbound/src/database/postgres/data/: health_check.rs  mod.rs  model_mapper.rs
outbound/src/database/postgres/data/models/: mod.rs  user_agreements.rs
outbound/src/database/postgres/data/repositories/: term_repository.rs  user_agreement_repository.rs
outbound/src/publisher/: mod.rs
outbound/src/publisher/kafka/: health_check.rs  mod.rs  service.rs
outbound/src/publisher/noop/: mod.rs
outbound/src/publisher/sns/: health_check.rs  mod.rs  service.rs
outbound/src/storage/: mod.rs
outbound/src/storage/gcloud/: health_check.rs  mod.rs  service.rs
outbound/src/storage/s3/: health_check.rs  mod.rs  service.rs
proto/: service.proto
proto/requests/: create_consent_request.proto  create_term_request.proto  get_latest_term_request.proto  has_consented_request.proto
proto/responses/: create_term_response.proto  get_latest_term_response.proto  has_consented_response.proto
src/: main.rs  telemetry.rs
src/core/: mod.rs  telemetry.rs
src/core/config/: cache.rs  mod.rs  publisher.rs  repository.rs  storage.rs
src/domain/: dto.rs  entities.rs  errors.rs
src/domain/data/: repository.rs
src/domain/data/service/: cache.rs  mod.rs  publisher.rs  storage.rs  upload.rs
src/domain/use_cases/: create_agreement.rs  create_term_of_use.rs  get_latest_term.rs  has_agreed_to_terms.rs  mod.rs
src/inbound/: mod.rs
src/inbound/actix/: mod.rs
src/inbound/actix/error/: mapper.rs  mod.rs  response.rs
src/inbound/actix/v1/: controller.rs  payload.rs  response.rs
src/inbound/grpc/: file_upload.rs  mapper.rs  mod.rs  server.rs
src/outbound/: mod.rs
src/outbound/cache/: mod.rs
src/outbound/cache/noop/: mod.rs
src/outbound/cache/redis/: mod.rs
src/outbound/database/: mod.rs
src/outbound/database/dynamodb/: migration.rs  mod.rs  model.rs
src/outbound/database/dynamodb/repositories/: term_repository.rs  user_agreement_repository.rs
src/outbound/database/postgres/: mod.rs
src/outbound/database/postgres/data/: model_mapper.rs
src/outbound/database/postgres/data/models/: prelude.rs  terms.rs  user_agreements.rs
src/outbound/database/postgres/data/repositories/: term_repository.rs  user_agreement_repository.rs
src/outbound/publisher/: mod.rs
src/outbound/publisher/kafka/: mod.rs
src/outbound/publisher/noop/: mod.rs
src/outbound/publisher/sns/: mod.rs
src/outbound/storage/: mod.rs
src/outbound/storage/gcloud/: mod.rs
src/outbound/storage/s3/: mod.rs
