[package]
name = "terms-of-use"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
actix-multipart = { version = "0.7.2", optional = true }
actix-web = { version = "4", optional = true }
aws-config = { version = "1.8", optional = true }
aws-sdk-dynamodb = { version = "1.101", optional = true }
aws-sdk-s3 = { version = "1.117", optional = true }
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = { version = "0.22.0", optional = true }
dotenvy = "0.15.7"
opentelemetry = { version = "0.31", optional = true }
opentelemetry-appender-tracing = { version = "0.31.0", optional = true }
opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = [
    "metrics",
], optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "metrics",
], optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
migration = { path = "migration", optional = true }
sea-orm = { version = "~2.0.0-rc.20", features = [
    "macros",
    "with-chrono",
], optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", optional = true, features = ["v4"] }
tonic = { version = "0.14", features = ["zstd"], optional = true }
prost = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
tonic-tracing-opentelemetry = { version = "0.32.0", optional = true }
init-tracing-opentelemetry = { version = "0.34.0", features = [
    "otlp",
    "metrics",
    "tracing_subscriber_ext",
], optional = true }
google-cloud-storage = { version = "1.4", optional = true }


[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }


[dev-dependencies]
serde_json = "1.0.145"


[features]
postgres = ["dep:sea-orm", "sea-orm/sqlx-postgres", "dep:migration"]
actix-web = ["dep:actix-web", "dep:serde", "dep:actix-multipart"]
cache = []
s3 = ["aws-config", "uuid", "aws-sdk-s3"]
redis = ["dep:deadpool-redis", "dep:serde_json", "dep:serde", "cache"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-subscriber",
    "tracing-opentelemetry",
    "opentelemetry-instrumentation-actix-web",
    "opentelemetry-appender-tracing",
    "init-tracing-opentelemetry",
    "tonic-tracing-opentelemetry",
]
grpc = [
    "tonic",
    "prost",
    "tonic-prost-build",
    "tonic-prost",
    "uuid",
    "tokio/fs",
]
gcloud = ["google-cloud-storage", "uuid", "tokio/fs"]
dynamodb = ["aws-sdk-dynamodb", "aws-config"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
