[package]
name = "terms-of-use"
version = "1.2.0"
edition = "2024"

[workspace]
members = ["domain", "inbound", "migration", "outbound"]

[dependencies]
domain = { path = "domain" }
dotenvy = "0.15.7"
inbound = { path = "inbound" }
jemallocator = "0.5"
opentelemetry = { version = "0.31", optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "metrics",
], optional = true }
outbound = { path = "outbound" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }


[features]
default = ["otel"]

# Web server
actix-web = ["inbound/actix-web"]
grpc = ["inbound/grpc"]

# Databases
postgres = ["outbound/postgres"]
dynamodb = ["outbound/dynamodb"]

# Cache
redis = ["outbound/redis"]
valkey = ["outbound/valkey"]

# Storage
gcloud = ["outbound/gcloud"]
s3 = ["outbound/s3"]

# OpenTelemetry
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-subscriber",
    "tracing-opentelemetry",
    "opentelemetry-appender-tracing",
]

# Publishers
sns = ["outbound/sns"]
kafka = ["outbound/kafka"]

# Stack
aws = ["s3", "dynamodb", "sns"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
