[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tracing = "0.1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
serde = ["dep:serde"]
