[package]
name = "outbound"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8", optional = true }
aws-sdk-dynamodb = { version = "1.101", optional = true }
aws-sdk-s3 = { version = "1.119", optional = true }
aws-sdk-sns = { version = "1.92", optional = true }
chrono = "0.4.42"
deadpool-redis = { version = "0.22.1", optional = true }
domain = { path = "../domain" }
google-cloud-storage = { version = "1.5", optional = true }
migration = { path = "../migration", optional = true }
rdkafka = { version = "0.38", optional = true }
sea-orm = { version = "~2.0.0-rc.27", features = [
    "macros",
    "with-chrono",
], optional = true, default-features = false }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["fs"], optional = true }
tracing = "0.1"
uuid = { version = "1.19.0", features = ["v4"], optional = true }
async-trait = "0.1"

[dev-dependencies]
aws-credential-types = "1.2"
aws-types = "1.3"
redis-test = "0.12"
once_cell = "1.21"
sea-orm = { version = "~2.0.0-rc.27", features = [
    "mock",
], default-features = false }
test-log = { version = "0.2.19", features = [
    "trace",
], default-features = false }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }

[features]
# Databases
postgres = ["sea-orm", "sea-orm/sqlx-postgres", "migration"]
dynamodb = ["aws-sdk-dynamodb", "aws-config"]

# Cache
cache = []
deadpool-redis = ["dep:deadpool-redis", "dep:serde_json", "domain/serde"]
redis = ["deadpool-redis", "cache"]
valkey = ["deadpool-redis", "cache"]

# Storage
gcloud = ["google-cloud-storage", "uuid", "tokio"]
s3 = ["aws-config", "uuid", "aws-sdk-s3"]

# Publishers
publisher = ["domain/serde", "dep:serde_json"]
sns = ["aws-sdk-sns", "publisher", "aws-config"]
kafka = ["rdkafka", "publisher"]
